pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constModule.pkl
notConst = 10

class Foo {
  shouldBeConst = module.notConst
}

foo = new Foo {}
